Changelog
=========

9.6-dev - (unreleased)
----------------------

9.5 - (2014-05-13)
------------------
* Change: hiddenStructure class now has an important declaration set to the
  display property in order to avoid being overriden by specificity
  [ichimdav refs #19369]
* Feature: folder_accordion_view now checks for a 'hideOtherResultsFromAccordionView'
  property which is present and is True will hide the other results section
  [ichimdav refs #19335]
* Change: relatedItems no longer has float issues if javascript is disabled or
  the tabs logic isn't executed because of a javascript error
  [ichimdav refs #19315]
* Feature: SEO, link EEA content with G+ publisher markup.
* Feature: Accordion default open panels by adding CSS class 'current'. Also
  support multiple open-by-default panels for non-exclusive accordions
  [voineali refs #19056]
* Feature: Added robots meta tag in <head> to disallow search
  engines to index "public draft" states (visible only with direct link).
  [demarant fixes #19091]
* Bug fix: Allow titles within PDF cover export longer than 65 chars (one line)
  [voineali refs #18953]
* Bugfix: Removed eea_vpip.js as it is obsolete and was in conflict with
  googlechart filters
  [szabozo0 refs #19174]
* Feature: Use high resolution SVG for daviz charts embed within PDF export
  instead of PNG
  [voineali refs #18910]
* Upgrade step: within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.design
  [olimpiurob refs #18641]
* Change: Removed tinymce plugins from this package. Moved to eea.tinymce
  package
  [olimpiurob refs #18641]
* Change: eea fullscreen plugin no longer uses the bundled fullscreen plugin
  which has many issues given the fact that it inserts a new editor when using
  it
  [ichimdav refs #19082]
* Bug fix: Key Facts class is now correctly applied on the parent ul tag
  [ichimdav refs #18785]
* Bug fix: Do not show old versions promo, only display the latest published
  version of promoted objects.